Fix content overflow; change background

--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -2,8 +2,14 @@
   width: 100%;
   height: 100%;
   min-height: 600px;
-  padding: 1.5rem;
+  padding: 1rem;
   display: flex;
   gap: 1rem;
-  background-image: linear-gradient(to right, #82ccdd, #60a3bc);
+  background-image: linear-gradient(
+    to bottom left,
+    #8294dd,
+    #a782dd,
+    #82bfdd,
+    #82ddc3
+  );
 }
